--- a/index.html
+++ b/index.html
@@ -1,17 +1,48 @@
 <!DOCTYPE html>
 <html>
-    <head>
-      <title>Tic-Tac-Toe</title>
-      <meta name="viewport" content="width=device-width, initial-scale=1">
 
-      <!-- Do not add `link` tags-->
-      <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+<head>
+  <title>Tic-Tac-Toe</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-      <!-- Do not add `script` tags-->
-      <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
-      <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
-    </head>
-    <body>
-      <h1>Browser Template</h1>
-    </body>
+  <!-- Do not add `link` tags-->
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- Do not add `script` tags-->
+  <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
+  <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
+</head>
+
+<body>
+  <h1>Tic-Tac-Toe</h1>
+  <div id="message"></div>
+  <section class="before-auth">
+    <h2>Sign Up</h2>
+    <form id="sign-up">
+      <input type="email" name="credentials[email]" placeholder="email">
+      <input type="password" name="credentials[password]" placeholder="password">
+      <input type="password" name="credentials[password_confirmation]" placeholder="password confirmation">
+      <button class="btn btn-primary">Submit</button>
+    </form>
+    <h2>Sign In</h2>
+    <form id="sign-in">
+      <input type="email" name="credentials[email]" placeholder="email">
+      <input type="password" name="credentials[password]" placeholder="password">
+      <button class="btn btn-primary">Submit</button>
+    </form>
+  </section>
+  <section class="after-auth">
+    <h2>Change Password</h2>
+    <form id="change-password">
+      <input type="text" name="passwords[old]" placeholder="old password">
+      <input type="text" name="passwords[new]" placeholder="new password">
+      <button class="btn btn-primary">Submit</button>
+    </form>
+
+    <h2>Sign Out</h2>
+    <form id="sign-out">
+      <button class="btn btn-secondary">Sign Out</button>
+    </form>
+  </section>
+</body>
 </html>
