Committing most recent changes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>Tic-Tac-Toe</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <!-- <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet"> -->
   <!-- Do not add `link` tags-->
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
@@ -14,9 +14,9 @@
 </head>
 
 <body>
+  <header>
   <h1>Tic-Tac-Toe</h1>
   <div id="message" class="message"></div>
-<header>
   <section class="before-auth">
     <h5>Sign Up</h5>
     <div class="container">
@@ -58,7 +58,7 @@
           <div id="total-games"></div>
       </form>
 
-    <section class="container-fluid">
+    <section class="container-fluid game-started">
       <h3>Game Board</h3>
       <div id="game-event" class="game-event"></div>
               <div class="row h-100 board">
