Myriad of changes. Tweaking game api

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <button class="d-inline-block btn btn-success">Start New Game</button>
       </form>
       <form>
-          <button id="get-total-games" class="d-inline-block btn btn-info">Get Total Games Played</button>
+          <button id="get-total-games" type="submit" class="d-inline-block btn btn-info">Get Total Games Played</button>
           <div id="total-games"></div>
       </form>
 
